# fastNN

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.sh  justfile
compat/: python_integration.cpp
include/: CMakeLists.txt
include/math/: CMakeLists.txt  Dense32.h  Matrix.h  SimpleMatrix.h  Vector.h  matrix_avx.h
include/model/: CMakeLists.txt  DataSet.h  DenseLayer.h  GradientUpdater.h  Layer.h  Model.h  OutputLayer.h  activationFunction.h  costFunction.h  gradientDescent.h  weightInit.h
include/model/updater/: AdamGradientUpdater.h  SGDGradientUpdater.h
include/util/: DataSet.h  debug_tools.h  helpers.h
src/: CMakeLists.txt
src/math/: CMakeLists.txt  Dense32.cpp  Matrix.cpp  Vector.cpp  matrix_avx_sp.cpp  vector_avx_sp.cpp
src/math/vector/: avx_sp.cpp
src/model/: CMakeLists.txt  DenseLayer.cpp  Model.cpp  OutputLayer.cpp  activationFunction.cpp  costFunction.cpp  gradientDescent.cpp  gradientDescent.h
src/model/updater/: AdamGradientUpdater.cpp
src/util/: DataSet.cpp
test/: test.cpp
test/python/: test.py
test/src/: CMakeLists.txt  activation_functions_test.cpp  matrix_test.cpp  test.cpp  test_util.h  vector_test.cpp
